fix: hot fix i18n and mobile wrap width

--- a/src/routes/workPage/workPage.scss
+++ b/src/routes/workPage/workPage.scss
@@ -9,7 +9,6 @@
   }
 
   &__content {
-    // width: 70%;
     background-color: #f2f7fb;
     border-radius: 20px 20px 0 0;
     padding: 90px 0 0;
@@ -29,9 +28,6 @@
   &__detail-title {
     font-size: 2.4em;
   }
-  &__detail-content {
-    // width: 650px;
-  }
 
   &__detail-img {
     display: flex !important;
@@ -46,6 +42,13 @@
       height: 100%;
     }
   }
+
+  @media (max-width: 992px) {
+    &__detail-wrap {
+      width: 80%;
+    }
+  }
+
   @media (max-width: 768px) {
     &__title {
       font-size: 3em;
@@ -72,6 +75,10 @@
 
     &__detail-content {
       font-size: 14px;
+    }
+
+    &__detail-wrap {
+      width: 90%;
     }
 
     &__detail-img {
